--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,20 +3,20 @@
         <div class="navbar-header">
             <a href="#" class="navbar-brand">Recipe-book</a>
         </div>
-
         <div class="collapse navbar-collapse">
             <ul class = "nav navbar-nav">
                 <li><a href = "#">Recipes</a></li>
                 <li><a href = "#">Shopping-list</a></li>
             </ul>
             <ul class = "nav navbar-nav navbar-right">
+                <a href="#" class= "dropdown-toggle" role="button">Manage<span class="caret"></span></a> 
                     <li class="dropdown">
                         <ul class="dropdown-menu">
                             <li><a href ="#">Save Data</a></li>
                             <li><a href ="#">Fetch Data</a></li>
                         </ul>
                     </li>
-                </ul>
+             </ul>
         </div>
     </div>
 </nav>
