--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,9 @@
+
 <div class="row">
-    <div class="col-xs-10">
+    <div class="col-md-12">
       <app-shopping-edit></app-shopping-edit>
       <hr>
-      <p>The List</p>
-    </div>
+      
+      <p>The List</p> 
+    </div>   
   </div>
