--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,8 @@
                 <li><a href = "#">Shopping-list</a></li>
             </ul>
             <ul class = "nav navbar-nav navbar-right">
-                <a href="#" class= "dropdown-toggle" role="button">Manage<span class="caret"></span></a> 
+                <a href="#" class= "dropdown-toggle" role="button">
+                    Manage<span class="caret"></span></a> 
                     <li class="dropdown">
                         <ul class="dropdown-menu">
                             <li><a href ="#">Save Data</a></li>
